# omni

./: .gitignore  .pre-commit-config.yaml  .spellcheck-allowlist  LICENSE  pyproject.toml
.airflow/: airflow.cfg
omni/dags/: news.py  pubmed_articles.py  youtube_channels.py
omni/tasks/chatgpt/: tasks.py
omni/tasks/new_york_times/: tasks.py
omni/tasks/notion/: tasks.py
omni/tasks/pubmed/: tasks.py
omni/tasks/sendgrid/: tasks.py
omni/tasks/youtube/: tasks.py
scripts/: configure.sh  generate_secret.py
tests/: test_omni.py
